--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "axios": "^0.16.2",
     "element-ui": "^1.3.7",
     "font-awesome": "^4.7.0",
+    "js-md5": "^0.6.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "mock": "^0.1.1",
     "scss": "^0.2.4",
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.1",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
